--- a/source/ApplyDBMigrationsApp/ApplyDBMigrationsApp.csproj
+++ b/source/ApplyDBMigrationsApp/ApplyDBMigrationsApp.csproj
@@ -218,6 +218,7 @@ limitations under the License.
     <EmbeddedResource Include="Scripts\Model\202503271548 Create index IX_OutgoingMessages_BundleMetadataForMessagesReadyToBeBundled.sql" />
     <EmbeddedResource Include="Scripts\Model\202503280930 Create index IX_OutgoingMessages_MessagesForBundle.sql" />
     <EmbeddedResource Include="Scripts\Model\202503311523 Add RelatedToMessageId to index IX_OutgoingMessages_BundleMetadataForMessagesReadyToBeBundled.sql" />
+    <EmbeddedResource Include="Scripts\Model\202506041337 Update index IX_Bundles_NextBundleToPeek on Bundles table.sql" />
     <EmbeddedResource Include="Scripts\Model\202504101204 Add DataCount to OutgoingMessages.sql" />
     <EmbeddedResource Include="Scripts\Model\202504161255 Add MeteringPointId to OutgoingMessages.sql" />
     <EmbeddedResource Include="Scripts\Model\202504221058 Add PaginationCursorValue to MeteringPointArchivedMessages.sql" />
