--- a/source/IncomingMessages.IntegrationTests/IncomingMessages.IntegrationTests.csproj
+++ b/source/IncomingMessages.IntegrationTests/IncomingMessages.IntegrationTests.csproj
@@ -71,6 +71,9 @@ limitations under the License.
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
         <None Remove="MessageParsers\Json\RequestValidatedMeasurements\ValidRequestValidatedMeasurements.json" />
+        <EmbeddedResource Include="MessageParsers\Ebix\RequestValidatedMeasurements\ValidRequestValidatedMeasurementsWithTwoTransactions.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
         <EmbeddedResource Include="MessageParsers\Json\RequestValidatedMeasurements\ValidRequestValidatedMeasurements.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
@@ -84,6 +87,10 @@ limitations under the License.
         </EmbeddedResource>
         <None Remove="MessageParsers\Json\RequestValidatedMeasurements\InvalidRequestValidatedMeasurements.json" />
         <EmbeddedResource Include="MessageParsers\Json\RequestValidatedMeasurements\InvalidRequestValidatedMeasurements.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </EmbeddedResource>
+        <None Remove="MessageParsers\Ebix\RequestValidatedMeasurements\ValidRequestValidatedMeasurements.xml" />
+        <EmbeddedResource Include="MessageParsers\Ebix\RequestValidatedMeasurements\ValidRequestValidatedMeasurements.xml">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </EmbeddedResource>
     </ItemGroup>
