--- a/source/BuildingBlocks.Domain/BuildingBlocks.Domain.csproj
+++ b/source/BuildingBlocks.Domain/BuildingBlocks.Domain.csproj
@@ -4,6 +4,7 @@
     <RootNamespace>Energinet.DataHub.EDI.BuildingBlocks.Domain</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Energinet.DataHub.ProcessManager.Abstractions" Version="6.1.0" />
     <PackageReference Include="Energinet.DataHub.ProcessManager.Components.Abstractions" Version="2.0.9" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="4.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.13.2">
